bidding wip
