# src/models/bid-result.js
@@ -1,0 +1,10 @@
+class BidResult {
+    accepted = false;
+    reason = '';
+
+    constructor(obj) {
+        Object.assign(this, obj);
+    }
+}
+
+module.exports = BidResult;
